fix several test errors